// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refs basic use 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block1 = createBlock(\`<div block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    let ref1 = createRef(ctx['this'].button);
    return block1([ref1]);
  }
}"
`;

exports[`refs ref is set by child component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, false, ["ref"]);
  
  return function template(ctx, node, key = "") {
    return comp1({ref: ctx['this'].ref}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`refs ref is set by child component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block1 = createBlock(\`<div id="ref" block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    let ref1 = createRef(ctx['this'].props.ref);
    return block1([ref1]);
  }
}"
`;

exports[`refs ref is unset when t-if goes to false after unrelated render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block2 = createBlock(\`<div block-attribute-0="class" block-ref="1"/>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.show) {
      let attr1 = ctx['this'].state.class;
      let ref1 = createRef(ctx['this'].ref);
      b2 = block2([attr1, ref1]);
    }
    return multi([b2]);
  }
}"
`;

exports[`refs refs and recursive templates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef, safeOutput } = helpers;
  const comp1 = app.createComponent(\`Test\`, true, false, false, ["tree"]);
  
  let block1 = createBlock(\`<p block-ref="0"><block-child-0/><block-child-1/></p>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    let ref1 = createRef(ctx['this'].root);
    b2 = safeOutput(ctx['this'].props.tree.value);
    if (ctx['this'].props.tree.child) {
      b3 = comp1({tree: ctx['this'].props.tree.child}, key + \`__1\`, node, this, null);
    }
    return block1([ref1], [b2, b3]);
  }
}"
`;

exports[`refs refs and t-key 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block2 = createBlock(\`<button block-handler-0="click"/>\`);
  let block3 = createBlock(\`<p block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    const v1 = ctx['this'];
    let hdlr1 = [()=>v1.state.renderId++, ctx];
    const b2 = block2([hdlr1]);
    const tKey_1 = ctx['this'].state.renderId;
    let ref1 = createRef(ctx['this'].root);
    const b3 = toggler(tKey_1, block3([ref1]));
    return multi([b2, b3]);
  }
}"
`;

exports[`refs refs are properly bound in slots 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, createRef, markRaw } = helpers;
  const comp1 = app.createComponent(\`Dialog\`, true, true, false, []);
  
  let block1 = createBlock(\`<div><span class="counter"><block-child-0/></span><block-child-1/></div>\`);
  let block3 = createBlock(\`<button block-handler-0="click" block-ref="1">do something</button>\`);
  
  function slot1(ctx, node, key = "") {
    let hdlr1 = [ctx['this'].doSomething, ctx];
    let ref1 = createRef(ctx['this'].button);
    return block3([hdlr1, ref1]);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val);
    const b4 = comp1({slots: markRaw({'footer': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    return block1([], [b2, b4]);
  }
}"
`;

exports[`refs refs are properly bound in slots 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key, 'footer', false, {});
    return block1([], [b2]);
  }
}"
`;

exports[`refs resource can be used for multi ref 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, createRef, withKey } = helpers;
  
  let block2 = createBlock(\`<p block-attribute-0="id" block-ref="1"/>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items());;
    for (let i1 = 0; i1 < l_block1; i1++) {
      ctx[\`item\`] = k_block1[i1];
      const key1 = ctx['item'];
      let attr1 = \`item-\${ctx['item']}\`;
      let ref1 = createRef(ctx['this'].refs);
      c_block1[i1] = withKey(block2([attr1, ref1]), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`refs throws if there are 2 same refs at the same time 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { makeRefWrapper } = helpers;
  
  let block2 = createBlock(\`<div block-ref="0"/>\`);
  let block3 = createBlock(\`<span block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    let refWrapper = makeRefWrapper(this.__owl__);
    let ref1 = refWrapper(\`coucou\`, (el) => this.__owl__.setRef((\`coucou\`), el));
    const b2 = block2([ref1]);
    let ref2 = refWrapper(\`coucou\`, (el) => this.__owl__.setRef((\`coucou\`), el));
    const b3 = block3([ref2]);
    return multi([b2, b3]);
  }
}"
`;

exports[`refs use 2 refs in a t-if/t-else situation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block2 = createBlock(\`<div block-ref="0"/>\`);
  let block3 = createBlock(\`<span block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['this'].state.value) {
      let ref1 = createRef(ctx['this'].ref1);
      b2 = block2([ref1]);
    } else {
      let ref2 = createRef(ctx['this'].ref2);
      b3 = block3([ref2]);
    }
    return multi([b2, b3]);
  }
}"
`;
